name:           redis-simple-tests
version:        0.0.1
build-type:     Simple
cabal-version:  >= 1.6

Executable testsuite
   hs-source-dirs:  ../src suite
   main-is:         TestSuite.hs

   build-depends:
     QuickCheck >= 2,
     base >= 4 && < 5,
     bytestring,
     network >= 2.2.3,
     HUnit >= 1.2 && < 2,
     random,
     redis,
     redis-simple,
     test-framework >= 0.3.1 && <0.4,
     test-framework-hunit >= 0.2.5 && < 0.3,
     test-framework-quickcheck2 >= 0.2.6 && < 0.3,
     utf8-string
     
   ghc-options: -O2 -Wall -fhpc -fwarn-tabs -funbox-strict-fields -threaded

